deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: webapp-nginx 
    app.kubernetes.io/component: webapp-nginx
    app.kubernetes.io/instance: webapp-nginx
    app.kubernetes.io/part-of: webapp-nginx
spec:
  replicas: 1
 selector:
    matchLabels:
      app: webapp-nginx
  template:
    metadata:
      labels:
        app: webapp-nginx
        deploymentconfig: webapp-nginx
    spec:
      containers:
        - name: webapp-nginx
          image: >-
            image-registry.openshift-image-registry.svc:5000/johnswebapp/webapp-nginx@sha256:ec083f77e241c2863108a0da46fdbc860a33af4208e1b78ac3a1de4065341769
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 2
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2021-08-10T18:48:50Z'
      lastTransitionTime: '2021-08-10T18:48:50Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2021-08-10T18:48:50Z'
      lastTransitionTime: '2021-08-10T18:48:18Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "webapp-nginx-78674bd5b7" has successfully progressed.
