service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/johbro/nginx-simple.git'
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: /api/v1/namespaces/johnswebapp/services/nginx-simple-git
  resourceVersion: '204398077'
  name: nginx-simple-git
  uid: ad7c1143-ae40-4ec7-9aba-b8f3a8c05515
  creationTimestamp: '2021-08-10T18:48:18Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2021-08-10T18:48:18Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:sessionAffinity': {}
          'f:type': {}
  namespace: johnswebapp
  labels:
    app: nginx-simple-git
    app.kubernetes.io/component: nginx-simple-git
    app.kubernetes.io/instance: nginx-simple-git
    app.kubernetes.io/part-of: nginx-simple-git-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: nginx-simple-git
    deploymentconfig: nginx-simple-git
  clusterIP: 172.30.175.121
  clusterIPs:
    - 172.30.175.121
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
