route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-simple-git
  namespace: johnswebapp
  uid: 904eaa7c-4927-4ff7-b968-05c1825727c7
  resourceVersion: '204398094'
  creationTimestamp: '2021-08-10T18:48:18Z'
  labels:
    app: nginx-simple-git
    app.kubernetes.io/component: nginx-simple-git
    app.kubernetes.io/instance: nginx-simple-git
    app.kubernetes.io/part-of: nginx-simple-git-app
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2021-08-10T18:48:18Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2021-08-10T18:48:18Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
spec:
  host: nginx-simple-git-johnswebapp.apps.osd-evalcluster.v0z2.p1.openshiftapps.com
  to:
    kind: Service
    name: nginx-simple-git
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        nginx-simple-git-johnswebapp.apps.osd-evalcluster.v0z2.p1.openshiftapps.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2021-08-10T18:48:18Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.osd-evalcluster.v0z2.p1.openshiftapps.com
